"fixed social link spacing"

--- a/site/css/sass/partials/header/_navbar.scss
+++ b/site/css/sass/partials/header/_navbar.scss
@@ -61,7 +61,7 @@ nav {
     position: fixed;
     z-index: 2;
     height: 80px;
-    transition: 1s ease-in-out;
+    transition: $common-transition ease-in-out;
 
     .container-fluid {
         background: $color-abyss-blue;
