--- a/site/css/sass/partials/sections/_contact.scss
+++ b/site/css/sass/partials/sections/_contact.scss
@@ -42,7 +42,6 @@
         align-items: center;
         gap: 10px;
 
-
         .social-links {
             list-style-type: none;
             display: flex;
@@ -58,7 +57,6 @@
             a {
                 display: flex;
                 gap: 10px;
-                align-items: center;
                 color: $color-white;
                 img {
                     width: 30px;
